# blendals_parser

./: .gitignore  README.md  pyproject.toml
blendals_parser/: extract_wave_from_audio_file.py  live_set.py  live_set_parser.py  live_set_to_song.py  main.py  song.py
tests/: test_parsing.py
tests/ableton_projects/: Piano Phase v.3 debug (17.04.2024).als
